# Personality_AI

./: .gitignore  .replit  DEPLOYMENT.md  DEPLOYMENT_FIXES.md  DEPLOYMENT_SUMMARY.md  FIXES_SUMMARY.md  LICENSE  Procfile  README.md  README_WEBAPP.md  RENDER_DEPLOYMENT.md  RENDER_FIXES.md  REPLIT_DEPLOYMENT.md  app.py  feature_columns.joblib  model.joblib  pyproject.toml  requirements.txt  scaler.joblib
backend/: README.md  README_HYPEROPTIMIZED.md  README_OPTIMIZED.md  advanced_optimization.py  app.py  feature_importance_analysis.csv  model_performance_metrics.csv  optimized_submission.csv  personality_prediction.py  personality_prediction_hyperoptimized_simplified.py  personality_prediction_optimized.py  requirements.txt  requirements_hyperoptimized.txt  requirements_hyperoptimized_simplified.txt  requirements_optimized.txt  run_optimized_pipeline.py  run_with_catboost.py  start_app.sh  submission.csv  test_app.py
frontend/: README.md
frontend/static/css/: style.css
frontend/static/js/: script.js
templates/: about.html  index.html
