[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "personality-ai"
version = "1.0.0"
description = "Personality Prediction AI Web Application"
authors = [{name = "Mithila17-UX"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "Flask>=2.0.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "xgboost>=1.5.0",
    "joblib>=1.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.9"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "venv*", ".venv*"] 